--- a/front-end/studio/src/app/components/vertical-nav.component.css
+++ b/front-end/studio/src/app/components/vertical-nav.component.css
@@ -1,5 +1,5 @@
 #api-vertical-nav {
-  background-color: #292e34;
+  
   overflow: hidden;
   grid-column-start: nav;
   grid-column-end: nav;
@@ -7,6 +7,7 @@
   padding: 0;
 }
 #api-vertical-nav .api-nav-item {
+  background-color: #292e34;
   display: flex;
   flex-direction: row;
   color: white;
@@ -18,18 +19,16 @@
 }
 
 .api-nav-item-create {
+  background-color: #292e34;
   font-weight: bold;
   display: flex;
   flex-direction: row;
   align-items: center;
   color: white;
-  border-bottom: 1px solid #030303;
   padding: 15px 10px 15px 10px;
-  text-align: center;
   border-right: 1px solid #030303;
   border-left: 2px solid transparent;
   margin-bottom: 20px;
-  background-color: #292e34;
 }
 
 #api-vertical-nav .api-nav-item div { 
